tests/machine/x/kotlin/map_nested_assign.error
line 63:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/map_nested_assign.kt:63:5: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Int>?
    data["outer"]["inner"] = 2
    ^
/workspace/mochi/tests/machine/x/kotlin/map_nested_assign.kt:64:13: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Int>?
    println(data["outer"]["inner"])
            ^

 62:     var data = mutableMapOf("outer" to mutableMapOf("inner" to 1))
 63:     data["outer"]["inner"] = 2
 64:     println(data["outer"]["inner"])
